[project]
name = "units"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["astropy>=6.1"]

[tool.uv]
dev-dependencies = ["ruff==0.5.7", "pyright==1.1.375"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
